--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce</title>
+    <!-- Font Awesome Link -->
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    <!-- css Link -->
+    <link rel="stylesheet" href="Style/Style.css">
+    <!-- JavaScript Link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="JavaScript/Script.js"></script>
 </head>
 <body>
-    
+    <!-- Header -->
+    <nav class="navbar">
+        <div class="inner-width">
+          <a href="/" class="logo"></a>
+          <button class="menu-toggler">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <div class="navbar-menu">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Education</a>
+            <a href="#">Works</a>
+            <a href="#">Contact</a>
+          </div>
+        </div>
+      </nav>
 </body>
 </html>
